--- a/Exercises/Lab03.Rmd
+++ b/Exercises/Lab03.Rmd
@@ -16,11 +16,12 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
 ### 1-1
-```{r pset1_1, eval=T, echo=T}
+```{r pset1_1}
 data('attitude') #Preloaded dataset
 summary(attitude$critical)
 
 #My answer is this as a comment.
+
 ```
 Or my answer can be written here
 
@@ -79,7 +80,7 @@ census_data %>%
   filter(STNAME == 'New Jersey')
 
 census_data %>% 
-  filter(STNAME != 'New Jersey' | white_alone_perc < .7)
+  filter(STNAME != 'New Jersey' & white_alone_perc < .7)
 ```
 
 
