--- a/Exercises/Slides_Tutorial.Rmd
+++ b/Exercises/Slides_Tutorial.Rmd
@@ -2,7 +2,7 @@
 title: "Title"
 author: "Author"
 date: "04/10/2024"
-output: ioslides_presentation
+output: beamer_presentation
 ---
 
 ```{r setup, include=FALSE}
